Vamos acabando el index y creamos los archivos style e index.js

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <div class="form-main-container">
         <div class="form-container">
-            <form action=""></form>
-            <input type="text">
-            <input type="text">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <form action="templates/formEnviado.html" id="formulario" method="get"></form>
+            <input type="text" id="nombre" class="name">
+            <input type="text" id="correo" class="email">
+            <textarea name="mensaje" id="mensaje" cols="4" rows="20" ></textarea>
         </div>
 
         <ul id="errores"></ul>
     </div>
 
-    <script src=""></script>
+    <script src="scripts/index.js"></script>
     
 </body>
 </html>
