--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
         </div>
     </div>
 
-    <div class="form-main-container">
+    <div class="main-container-form">
+        <h2>Contáctanos</h2>
+        <br><br>
         <div class="form-container">
-            <form action="templates/formEnviado.html" id="formulario" method="get"></form>
-            <input type="text" id="nombre" class="name">
-            <input type="text" id="correo" class="email">
-            <textarea name="mensaje" id="mensaje" cols="4" rows="20" ></textarea>
+            <form id="formulario" action="enviaCorreo.html" method="get">
+                <input name="nombre" id="nombre" placeholder="Nombre" type="text" class="name">
+                <input name="correo" id="correo" placeholder="Correo" type="text" class="email">
+                <textarea name="mensaje" id="mensaje" cols="4" rows="20" placeholder="Por favor, inserte un mensaje" class="message"></textarea>
+                <input id="enviar" type="submit" class="btn" value="Enviar">
+    
+                <ul id="errores"></ul>
+            </form>
         </div>
-
-        <ul id="errores"></ul>
     </div>
 
     <script src="scripts/index.js"></script>
