Vamos acabando los estilos

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
         <div class="form-container">
             <form id="formulario" action="templates/formEnviado.html" method="get">
                 <input name="nombre" id="nombre" placeholder="Nombre" type="text" class="name">
-                <input name="correo" id="correo" placeholder="Correo" type="text" class="email">
+                <input name="correo" id="correo" placeholder="Correo electrónico" type="text" class="email">
                 <input type="radio" id="radio1" name="radio" checked>
+                <br>
                 <input type="radio" id="radio2" name="radio">
+                <br>
                 <input id="info" type="submit" class="btn" value="Info">
+                <br>
                 <textarea name="mensaje" id="mensaje" cols="4" rows="20" placeholder="Por favor, introduzca un mensaje" class="message"></textarea>
                 <input id="enviar" type="submit" class="btn" value="Enviar">
     
