Añadimos comentarios al js

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <form id="formulario" action="templates/formEnviado.html" method="get">
                 <input name="nombre" id="nombre" placeholder="Nombre" type="text" class="name">
                 <input name="correo" id="correo" placeholder="Correo electrónico" type="text" class="email">
+                <p>chjkhzx</p>
                 <input type="radio" id="radio1" name="radio" checked>
                 <br>
+                <p>ckj</p>
                 <input type="radio" id="radio2" name="radio">
                 <br>
                 <input id="info" type="submit" class="btn" value="Info">
